[package]
name = "bls-cxx"
description = "FFI Interface to BLS"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
cxx = { path = "../../../../third_party/rust/cxx/v1/crate"}
bls-signatures = { version = "0.11.3", default-features = false, features = ["pairing"] }
libc = "0.2.58"
filecoin-signer = { git = "https://github.com/spylogsster/filecoin-signing-tools", rev = "37386c2014a889fb8502fae779b6704fcfd028fa"}
serde_json = "^1.0.59"
base64 = "0.12.3"

[lib]
name = "bls_cxx"
crate-type = ["rlib"]
