[package]
name = "bls-cxx"
description = "FFI Interface to BLS"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
cxx = { path = "../../../../third_party/rust/cxx/v1/crate"}
bls-signatures = { version = "0.11.3", default-features = false, features = ["pairing"] }
libsecp256k1 = "0.6"
libc = "0.2.58"
serde = { version = "^1.0.117", features = ["derive"] }
serde_json = "^1.0.59"
serde_cbor = "0.11.1"
serde_bytes = "0.11.5"
blake2b_simd = "0.5.10"
hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
fvm_shared = "0.3.1"
cid = "=0.8.2"
thiserror = "^1.0.30"
num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.2"}
zx-bip44 = "0.1.0"
base64 = "0.12.3"

[lib]
name = "bls_cxx"
crate-type = ["rlib"]
